k8s/canary/deployment-stable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-satc
  namespace: ##K8S_NAMESPACE##
  labels:
    app: satc
    track: stable
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: satc
      track: stable
  template:
    metadata:
      labels:
        app: satc
        track: stable
    spec:
      containers:
        - name: satc-devops
          image: ##DOCKER_IMAGE##
          ports:
            - containerPort: 80
          startupProbe:
            httpGet:
              path: /healthz
              port: 80
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /ready
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
