k8s/canary/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-satc-stable
  namespace: ##K8S_NAMESPACE##
  labels:
    app: satc
    track: stable
spec:
  type: ClusterIP
  selector:
    app: satc
    track: stable
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
