k8s/canary/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-satc-ingress-canary
  namespace: ##K8S_NAMESPACE##
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: ##APP_HOST##
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-satc-canary
                port:
                  number: 80
