k8s/canary/ingress-stable.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-satc-ingress
  namespace: ##K8S_NAMESPACE##
spec:
  ingressClassName: nginx
  rules:
    - host: ##APP_HOST##
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-satc-stable
                port:
                  number: 80
